objects/System_at_Dealership__c.object
<CustomObject>
    <description>Systems identified at a specific dealership</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Systems at Dealership</relationshipLabel>
        <relationshipName>R00N40000001leejEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR (Install_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box_ID__c</fullName>
        <label>Box ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Site Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Systems at Dealership (Box Location)</relationshipLabel>
        <relationshipName>R00N40000001lei5EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Box_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In Request for Change/CCF this is referred to Primary Site (if checked) or Connected Site (if unchecked)”</inlineHelpText>
        <label>Primary Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Base_Version__c</fullName>
        <label>CRM Base Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Client_ID__c</fullName>
        <description>for backend systems</description>
        <label>CRM Client ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Install_Type__c</fullName>
        <label>CRM Install Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Version__c</fullName>
        <label>CRM Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompositeExtID__c</fullName>
        <description>Accountid(18) + Install Date(yyyymmdd) + SLXVendorsID(12) + SLXSysID(12) + Type(20)</description>
        <externalId>true</externalId>
        <label>CompositeExtID</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_MSA_Term__c</fullName>
        <label>Contract/MSA Term</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Date__c</fullName>
        <formula>/* found better algorithim online: https://success.salesforce.com/questiondetail?qId=a1X30000000HlGvEAK */ 
/* Note from CW 7/8/2013 - DH suggested fix to this formula to ignore any install date over 28 */ 
IF(NOT(ISBLANK(MSA_Length__c)), 
DATE( Year(Install_Date__c) + FLOOR((MONTH(Install_Date__c) + MSA_Length__c -1) / 12) , 
MOD(MONTH(Install_Date__c) + MSA_Length__c -1, 12) + 1 , 
IF(DAY(Install_Date__c)&gt;28, 28, DAY(Install_Date__c)) ) 
, NULL)</formula>
        <label>Current Term Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_DMS_Proposal_ID__c</fullName>
        <label>Current DMS Proposal ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMS_Device_Code__c</fullName>
        <label>DMS Device Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Software_Level__c</fullName>
        <label>DMS Software Level</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_System_User__c</fullName>
        <label>DMS System Users</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Current Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration_Date__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Client_Date__c</fullName>
        <label>Loss Client Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Length__c</fullName>
        <inlineHelpText>Specify Months</inlineHelpText>
        <label>Contract Term (Mos.)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Signed_Date__c</fullName>
        <label>MSA Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Term_Date__c</fullName>
        <formula>IF(AND(NOT( ISBLANK(MSA_Signed_Date__c)),  NOT( ISBLANK(MSA_Length__c))),
DATE(YEAR(MSA_Signed_Date__c + ( MSA_Length__c *30)), MONTH(MSA_Signed_Date__c + ( MSA_Length__c *30)), DAY(MSA_Signed_Date__c)) 
, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSA Term. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Lease__c</fullName>
        <label>Monthly Lease $</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Support__c</fullName>
        <label>Monthly Support $</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Expiry_Date__c</fullName>
        <label>Original Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Install_Date__c</fullName>
        <label>Original Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reynolds_iDMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>-- backend field</description>
        <label>R&amp;R iDMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLX_DealerSysRec_CreateDate__c</fullName>
        <label>SLX DealerSysRec CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_DealerSysRec_ID__c</fullName>
        <label>SLX DealerSysRec ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_Sys_ID__c</fullName>
        <label>SLX Sys ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_Vendor_ID__c</fullName>
        <label>SLX Vendor ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYS_Model__c</fullName>
        <label>SYS Model</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_DMS_Estimated_Install_Date__c</fullName>
        <label>Sold DMS Estimated Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_DMS_Proposal_ID__c</fullName>
        <label>Sold DMS Proposal ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_DMS_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold DMS Vendor System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Systems at Dealership (Sold DMS Vendor)</relationshipLabel>
        <relationshipName>R00N40000001lfgsEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_Date__c</fullName>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Software__c</fullName>
        <description>System Software</description>
        <inlineHelpText>System Software are: 9400 and 9500(Drive), 9200 and 9300 (w.e.b.Suite), 8800(Elite), R&amp;R-Adv-GS(ERA), R&amp;R-Adv-HP(ERA ES), R&amp;R-Adv-S(ERA XT), Mannheim (Mannheim Tracker), Infinity(Netfinity), Autocomplete(Profit Max), Serti(SDSWin), Toyota(TIME 2K)</inlineHelpText>
        <label>System Software</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <label>System Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Systems_at_Dealership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Systems at Dealership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Users_Handsets__c</fullName>
        <label># Users/Handsets</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Systems at Dealership (Vendor)</relationshipLabel>
        <relationshipName>R00N40000001lfXZEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iDMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iDMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Ports__c</fullName>
        <label># of Ports</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System at Dealership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Systems</fullName>
        <columns>NAME</columns>
        <columns>Box_Onsite__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Systems_at_Dealership__c</columns>
        <columns>System_Type__c</columns>
        <columns>Vendor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Systems</label>
    </listViews>
    <listViews>
        <fullName>CRM_Systems</fullName>
        <columns>NAME</columns>
        <columns>Box_Onsite__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Systems_at_Dealership__c</columns>
        <columns>System_Type__c</columns>
        <columns>Vendor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>CRM</value>
        </filters>
        <label>CRM Systems</label>
    </listViews>
    <listViews>
        <fullName>DMS_Systems</fullName>
        <columns>NAME</columns>
        <columns>Box_Onsite__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Systems_at_Dealership__c</columns>
        <columns>System_Type__c</columns>
        <columns>Vendor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>DMS</value>
        </filters>
        <label>DMS Systems</label>
    </listViews>
    <listViews>
        <fullName>Phone_Systems</fullName>
        <columns>NAME</columns>
        <columns>Box_Onsite__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Systems_at_Dealership__c</columns>
        <columns>System_Type__c</columns>
        <columns>Vendor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>Phone</value>
        </filters>
        <label>Phone Systems</label>
    </listViews>
    <nameField>
        <displayFormat>ID - {00000}</displayFormat>
        <label>Sys at Dealership</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Systems at Dealership</pluralLabel>
    <recordTypes>
        <fullName>AccountSystemsCRMSystem</fullName>
        <active>true</active>
        <label>Account - Systems CRM System</label>
    </recordTypes>
    <recordTypes>
        <fullName>AccountSystemsDMS</fullName>
        <active>true</active>
        <label>Account - Systems DMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>AccountSystemsLeasingSystems</fullName>
        <active>true</active>
        <label>Account - Systems Leasing Systems</label>
    </recordTypes>
    <recordTypes>
        <fullName>AccountSystemsPhoneSystem</fullName>
        <active>true</active>
        <label>Account - Systems Phone System</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Box_Location_Required</fullName>
        <active>false</active>
        <description>If Box Onsite is checked, then Box Location is required.</description>
        <errorConditionFormula>IF(NOT(Box_Onsite__c ) , LEN(Box_Location__c)=0 , false)</errorConditionFormula>
        <errorDisplayField>Box_Location__c</errorDisplayField>
        <errorMessage>Box Location is Required when the box is not onsite.</errorMessage>
    </validationRules>
</CustomObject>